--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
             <version>0.9.4</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.twinpeaksdata</groupId>
+            <artifactId>storm_client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
