--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.twinpeaksdata</groupId>
-    <artifactId>storm_foobar</artifactId>
+    <groupId>io.twinpeaks</groupId>
+    <artifactId>stormfoobar</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
@@ -13,8 +13,8 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>com.twinpeaksdata</groupId>
-            <artifactId>storm_client</artifactId>
+            <groupId>io.twinpeaks</groupId>
+            <artifactId>adaptors</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
@@ -32,7 +32,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.twinpeaksdata.storm_foobar.TopologySubmitter</mainClass>
+                            <mainClass>io.twinpeaks.stormfoobar.TopologySubmitter</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
